--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.3.0",
-    "jest": "^21.1.0"
+    "jest": "^21.1.0",
+    "react-addons-test-utils": "^15.6.0",
+    "react-test-render": "^1.0.3"
   },
   "babel": {
     "presets": [
@@ -32,11 +34,16 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.7",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
+    "node-sass": "^4.5.3",
     "pm2": "^2.7.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-test-renderer": "^15.6.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^3.6.0"
   }
 }
