--- a/package.json
+++ b/package.json
@@ -46,5 +46,6 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.6.0"
-  }
+  },
+  "author": "domrev_igor <igor@innovid.com>"
 }
