using wundow.initalState to save refetching and re-rendering the application when javascript is enabled

--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
     "ejs": "^2.5.7",
+    "es6-promise": "^4.1.1",
     "express": "^4.15.4",
+    "isomorphic-fetch": "^2.2.1",
     "node-sass": "^4.5.3",
     "pm2": "^2.7.0",
     "react": "^15.6.1",
