--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "isomorphic-fetch": "^2.2.1",
     "node-sass": "^4.5.3",
     "pm2": "^2.7.0",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-test-renderer": "^15.6.1",
