--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "es6-promise": "^4.1.1",
     "express": "^4.15.4",
     "isomorphic-fetch": "^2.2.1",
+    "lodash.debounce": "^4.0.8",
+    "lodash.pickby": "^4.6.0",
     "node-sass": "^4.5.3",
     "pm2": "^2.7.0",
     "prop-types": "^15.5.10",
