--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-react": "^7.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "jest": "^21.1.0",
+    "react-addons-perf": "^15.4.2",
     "react-addons-test-utils": "^15.6.0",
     "react-test-render": "^1.0.3"
   },
@@ -40,6 +41,7 @@
     "ejs": "^2.5.7",
     "es6-promise": "^4.1.1",
     "express": "^4.15.4",
+    "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash.debounce": "^4.0.8",
     "lodash.pickby": "^4.6.0",
