--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest --watch",
     "coverege": "jest --coverage",
     "build-node": "babel lib -d build --copy-files",
-    "start-prod": "NODE_ENV=production NODE_PATH=./build pm2 start build/server.js -i max --name appProd"
+    "start-prod": "NODE_ENV=production NODE_PATH=./build pm2 start build/server.js -i max --name appProduction"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.0",
