--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "eslint-plugin-react": "^7.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "jest": "^21.1.0",
+    "jest-cli": "^21.1.0",
+    "jest-haste-map": "^21.1.0",
     "react-addons-perf": "^15.4.2",
     "react-addons-test-utils": "^15.6.0",
     "react-test-renderer": "^15.6.1"
