--- a/package.json
+++ b/package.json
@@ -65,5 +65,5 @@
     "style-loader": "^0.18.2",
     "webpack": "^3.6.0"
   },
-  "author": "domrev_igor <igor@innovid.com>"
+  "author": "domrev__igor <igor@innovid.com>"
 }
