preparing docker container

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
 node_modules
 coverage
-public/bundle.js
-public/style.css
+public
 build
-public/app.js
-public/styles.css
-public/styles.js
-public/vendor.js
 .coveralls.yml
