--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest --watch",
     "coverage": "jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "build-node": "babel lib -d build --copy-files",
-    "start-prod": "NODE_ENV=production NODE_PATH=./build pm2 start build/server.js -i max --name appProduction",
+    "start-prod": "NODE_ENV=production NODE_PATH=./build pm2 start build/server.js -i max --name appProduction && pm2 logs",
     "start":"ls && run-s dist build-node start-prod"
   },
   "devDependencies": {
