--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "webpack": "webpack -wd",
     "dist": "webpack -p",
     "test": "jest --watch",
-    "coverage": "jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "coverage": "jest --coverage && codecov",
     "build-node": "babel lib -d build --copy-files",
     "start-prod": "NODE_ENV=production NODE_PATH=./build pm2 start build/server.js -i max --name appProduction && pm2 logs",
     "start":"ls && run-s dist build-node start-prod"
