adding codecov coverage

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "coverage": "jest --coverage && codecov",
     "build-node": "babel lib -d build --copy-files",
     "start-prod": "NODE_ENV=production NODE_PATH=./build pm2 start build/server.js -i max --name appProduction && pm2 logs",
-    "start":"ls && run-s dist build-node start-prod"
+    "start": "ls && run-s dist build-node start-prod"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.0",
@@ -44,24 +44,25 @@
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-node6": "^11.0.0",    
-    "react-addons-perf": "^15.4.2",    
+    "babel-preset-node6": "^11.0.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "codecov": "^2.3.0",
     "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.0",    
     "ejs": "^2.5.7",
-    "npm-run-all": "^4.1.1",    
     "es6-promise": "^4.1.1",
     "express": "^4.15.4",
+    "extract-text-webpack-plugin": "^3.0.0",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash.debounce": "^4.0.8",
     "lodash.pickby": "^4.6.0",
     "node-sass": "^4.5.3",
+    "npm-run-all": "^4.1.1",
     "pm2": "^2.7.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-addons-perf": "^15.4.2",
     "react-dom": "^15.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
