--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ node_js:
  - "8"
 after_success:
   - docker build -t domrevigor/domrevigor:advanced-react .
+  - echo "$DOCKER_USERNAME"
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - docker push domrevigor/domrevigor:advanced-react
