--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.0.0",
+    "component-image": "^1.0.0",
     "coveralls": "^2.13.1",
     "enzyme": "^2.9.1",
     "eslint": "^4.6.1",
@@ -26,6 +27,8 @@
     "jest": "^21.1.0",
     "jest-cli": "^21.1.0",
     "jest-haste-map": "^21.1.0",
+    "jest-image-snapshot": "^1.0.1",
+    "navalia": "^1.2.0",
     "react-addons-test-utils": "^15.6.0",
     "react-test-renderer": "^15.6.1"
   },
