--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,4 @@ after_success:
 - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
 - docker push domrevigor/domrevigor:advanced-react
 - wget -qO- https://toolbelt.heroku.com/install-ubuntu.sh | sh heroku plugins:install heroku-docker
+- heroku docker:release --web
