--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ after_success:
 - echo "$DOCKER_USERNAME"
 - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
 - docker push domrevigor/domrevigor:advanced-react
+- docker tag domrevigor/domrevigor registry.heroku.com/advanced-react-course/web
 - wget -qO- https://toolbelt.heroku.com/install-ubuntu.sh 
 - heroku container:login
-- heroku container:push web
+- docker push registry.heroku.com/registry.heroku.com/advanced-react-course/web
