--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ node_js:
 - '8'
 after_success:
 - docker build -t domrevigor/domrevigor:advanced-react .
-- echo "$DOCKER_USERNAME"
+- docker ps
 - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
 - docker push domrevigor/domrevigor:advanced-react
 - docker tag domrevigor/domrevigor registry.heroku.com/advanced-react-course/web
