--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ node_js:
 - '8'
 after_success:
 - docker build -t domrevigor/domrevigor:advanced-react .
-- docker ps
+- docker images
 - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
 - docker push domrevigor/domrevigor:advanced-react
-- docker tag domrevigor/domrevigor registry.heroku.com/advanced-react-course/web
+- docker tag domrevigor/domrevigor:advanced-react registry.heroku.com/advanced-react-course/web
 - wget -qO- https://toolbelt.heroku.com/install-ubuntu.sh 
 - heroku container:login
 - docker push registry.heroku.com/registry.heroku.com/advanced-react-course/web
