--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "coverage": "jest --coverage && codecov",
     "build-node": "babel lib -d build --copy-files",
     "start-prod": "NODE_ENV=production NODE_PATH=./build pm2 start build/server.js -i max --name appProduction && pm2 logs",
-    "start": "ls && run-s dist build-node start-prod"
+    "start": "ls && run-s dist build-node start-prod",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^3.2.11",
+    "@storybook/addon-links": "^3.2.10",
+    "@storybook/react": "^3.2.11",
     "babel-eslint": "^8.0.0",
     "component-image": "^1.0.0",
     "coveralls": "^2.13.1",
@@ -66,6 +71,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-addons-perf": "^15.4.2",
+    "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
