--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "advanced-react",
   "version": "1.0.0",
-  "main": "lib/server.js",
+  "main": "lib/backend/server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_PATH=./lib pm2 start lib/server.js --watch --interpreter babel-node --name appDev",
+    "dev": ". env.sh ; NODE_PATH=./lib pm2 start lib/backend/server.js --watch --interpreter babel-node --name appDev",
     "webpack": "webpack -wd",
     "dist": "webpack -p",
     "test": "jest --watch",
     "coverage": "jest --coverage && codecov",
     "build-node": "babel lib -d build --copy-files",
-    "start-prod": "NODE_ENV=production NODE_PATH=./build pm2 start build/server.js -i max --name appProduction && pm2 logs",
+    "start-prod": "NODE_ENV=production NODE_PATH=./build pm2 start build/backend/server.js -i max --name appProduction && pm2 logs",
     "start": "ls && run-s dist build-node start-prod",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -61,10 +61,12 @@
     "es6-promise": "^4.1.1",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
+    "formidable": "^1.1.1",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash.debounce": "^4.0.8",
     "lodash.pickby": "^4.6.0",
+    "mongodb": "^2.2.31",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.1",
     "pm2": "^2.7.0",
@@ -75,6 +77,7 @@
     "react-dom": "^15.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "uuid": "^3.1.0",
     "webpack": "^3.6.0"
   },
   "author": "domrev__igor <igor@innovid.com>"
