--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ before_script:
 script: yarn coverage
 language: node_js
 env:
-- PORT=8090
+- PORT=8099
 node_js:
 - '8'
 after_success:
 #todo: make sure build fails if dependencies failed to install
-- npm install --production
+- yarn --production
 - docker-compose build
 - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
 - docker push domrevigor/domrevigor:advanced-react
