--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "lib/backend/server.js",
   "license": "MIT",
   "scripts": {
-    "dev": ". env.sh ; NODE_PATH=./lib pm2 start lib/backend/server.js --watch --interpreter babel-node --name appDev",
+    "dev": "source env.sh && NODE_PATH=./lib pm2 start lib/backend/server.js --watch --interpreter babel-node --name appDev",
     "webpack": "webpack -wd",
     "dist": "webpack -p",
     "test": "jest --watch",
