--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,13 @@ sudo: required
 services:
 - docker
 before_script:
+- echo ${HOST}
 - yarn
 script: yarn coverage
 language: node_js
 env:
 - PORT=8099
+- HOST=${HOST}
 node_js:
 - '8'
 after_success:
