--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@storybook/addon-actions": "^3.2.11",
     "@storybook/addon-links": "^3.2.10",
     "@storybook/react": "^3.2.11",
+    "@types/jest": "^22.0.1",
     "babel-eslint": "^8.0.0",
     "component-image": "^1.0.0",
     "coveralls": "^2.13.1",
@@ -67,6 +68,7 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash.debounce": "^4.0.8",
     "lodash.pickby": "^4.6.0",
+    "node-fetch": "^1.7.3",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.1",
     "pm2": "^2.7.0",
